# cron-mon-py

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: test_monitor.py
src/cron_mon/: __init__.py  monitor.py
tests/: test_config.py  test_monitor.py
