[project]
name = "cron-mon-py"
version = "0.1.0"
description = "A simple integration for [CronMon](https://github.com/cron-mon-io)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cron_mon"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.0",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 100

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing"
testpaths = [
    "tests/"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 79
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = [
    "D",
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "W",
    "C901"
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Black-like setup
quote-style = "double"             # Use double quotes.
indent-style = "space"             # Use spaces for indentation.
skip-magic-trailing-comma = false  # Respect magic trailing commas.
line-ending = "auto"               # Automatically detect the appropriate line ending.

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false
